testing/tests/ui/loop_cycle_empty.stderr
error: loop.cycle(…) cannot use an empty array
 --> ForCycleEmpty.txt:1:35
       "[]) }}{{ v }},{% endfor %}"
 --> tests/ui/loop_cycle_empty.rs:5:14
  |
5 |     source = r#"{% for v in values %}{{ loop.cycle([]) }}{{ v }},{% endfor %}"#,
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: loop.cycle(…) doesn't use generics
 --> ForCycleGenerics.txt:1:37
       "u8>([]) }}{{ v }},{% endfor %}"
  --> tests/ui/loop_cycle_empty.rs:12:14
   |
12 |     source = r#"{% for v in values %}{{ loop.cycle::<u8>([]) }}{{ v }},{% endfor %}"#,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
